--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<title>电子政务</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
-	
+
 	<link rel="stylesheet" href="./css/jquery.mCustomScrollbar.css">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css" />
 	<link rel="stylesheet" type="text/css" href="./css/index.css" />
@@ -69,7 +69,7 @@
 			</div>
 			<div class="mainContent">
 				<div class="topSection">
-					<div id="carousel01" class="leftRow floatLeft carousel slide" >
+					<div id="carousel01" class="leftRow floatLeft carousel slide" data-ride="carousel">
 						<!-- Indicators -->
 						<ol class="carousel-indicators SelfIndicators">
 							<li data-target="#carousel01" data-slide-to="0" class="circle active"></li>
@@ -85,7 +85,9 @@
 								<div class="carousel-caption selfCarouselCaption">
 									<a href="#" class="linkA">
 										<h2 class="selfTitle">生态环境厅机关党委书记龙仕荣赴松潘县开展精准扶贫慰问调研</h2>
-										<p class="li-heading headTwoLine">12月4日—5日，生态环境厅机关党委书记、党组成员龙仕荣率机关党办、人事处一行深入定点扶贫松潘县调研脱 贫攻坚工作，看望帮扶贫成员龙仕荣率机关党办、人事处一行深入定点扶贫松潘县调研脱 贫攻成员龙仕荣率机关党办、人事处一行深入定点扶贫松潘县调研脱 贫攻</p>
+										<p class="li-heading headTwoLine">12月4日—5日，生态环境厅机关党委书记、党组成员龙仕荣率机关党办、人事处一行深入定点扶贫松潘县调研脱 贫攻坚工作，看望帮扶贫成员龙仕荣率机关党办、人事处一行深入定点扶贫松潘县调研脱 贫攻成员龙仕荣率机关党办、人事处一行深入定点扶贫松潘县调研脱
+											贫攻
+										</p>
 									</a>
 								</div>
 							</div>
@@ -133,7 +135,8 @@
 											<td>
 												<div class="li-left ">
 													<h2 class="date">
-														<span>12</span>-<span>14</span>
+														<span>12</span>-
+														<span>14</span>
 													</h2>
 													<p class="year">2018</p>
 												</div>
@@ -239,19 +242,16 @@
 								<li role="presentation" class="selfTab ">
 									<a href="#cadresAppiont" role="tab" data-toggle="tab">干部任免</a>
 								</li>
-								<!-- 最后一个li用来显示 ‘更多’，与左边不一样 -->
 								<li role="presentation" class="disabled selfTab flex1">
-									<div class="moreDiv moreDiv2">
-										<p class="more">
-											<a href="#">更多
-												<i class="moreIcon"></i>
-											</a>
-										</p>
-									</div>
-									<!-- <a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a> -->
 								</li>
-
 							</ul>
+							<div class="moreDiv moreDiv2">
+								<p class="more">
+									<a href="#">更多
+										<i class="moreIcon"></i>
+									</a>
+								</p>
+							</div>
 							<div class="tab-content">
 								<div role="tabpanel " class="tab-pane RightTableDiv active" id="MeetingNotice">
 									<ol class="headLineList">
@@ -327,16 +327,15 @@
 									<a href="#loadCenter" role="tab" data-toggle="tab">下载中心</a>
 								</li>
 								<li role="presentation" class="disabled selfTab flex1">
-									<div class="moreDiv moreDiv2">
-										<p class="more">
-											<a href="#">更多
-												<i class="moreIcon"></i>
-											</a>
-										</p>
-									</div>
-									<!-- <a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a> -->
 								</li>
 							</ul>
+							<div class="moreDiv moreDiv2">
+								<p class="more">
+									<a href="#">更多
+										<i class="moreIcon"></i>
+									</a>
+								</p>
+							</div>
 							<div class="tab-content">
 								<div role="tabpanel " class="tab-pane RightTableDiv active" id="loadCenter">
 									<ol class="headLineList">
